# LLM-robot_arm_control

./: .gitignore  AGENTS.md  LLM_demo_no_api.ipynb  README.md  SeoSoon.md
NO USE/project/: llm_to_json.py  pick_place.py  test_llm_to_json.py
NO USE/project/google_demo/: Code_as_Policies_Interactive_Demo_ipynb의_사본.ipynb  LLM_demo.ipynb
docs/: robot-development-workflow.md
project/: command_parser.py  llm_to_json.py  pick_place.py
ros2_ur_ws/src/Universal_Robots_ROS2_Description/urdf/: ur10e.urdf
ros2_ur_ws/src/isaac_moveit_bridge/: package.xml  setup.py
ros2_ur_ws/src/isaac_moveit_bridge/isaac_moveit_bridge/: action_bridge.py  allow_touch_collisions.py  joint_state_logger.py  moveit_pick_place_demo.py  moveit_pose_goal.py  moveit_target_follow.py  scene_collision_publisher.py  tcp_pose.py  tcp_pose_test.py
ros2_ur_ws/src/mtc_tutorial/: CMakeLists.txt  package.xml
ros2_ur_ws/src/mtc_tutorial/launch/: isaac_moveit_full_stack.launch.py  move_group.launch.py  move_group_interface_tutorial.launch.py  mtc.rviz  mtc_demo.launch.py  mtc_demo_minimal.launch.py  mtc_isaac_demo.launch.py  pick_place_demo.launch.py
ros2_ur_ws/src/mtc_tutorial/src/: mtc_tutorial.cpp
ros2_ur_ws/src/pal_robotiq_description/: CMakeLists.txt  package.xml
ros2_ur_ws/src/pal_robotiq_description/urdf/: robotiq_140_gripper.urdf.xacro  robotiq_85_gripper.urdf.xacro
ros2_ur_ws/src/ur10e_robotiq_2f140_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ur_ws/src/ur10e_robotiq_2f140_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  (+6 more)
ros2_ur_ws/src/ur10e_robotiq_description/: CMakeLists.txt  package.xml
ros2_ur_ws/src/ur10e_robotiq_description/urdf/: ur10e_robotiq_2f140.urdf  ur10e_robotiq_2f140.urdf.xacro  ur10e_robotiq_2f140_clean.urdf
ur10e/: AGENTS.md  Project_context.md  SeoSoon.txt  camera_test.py  command_parser.py  command_server.py  grasp_policy.py  llm_to_json.py  mtc_command_runner.py  pick_place_example.py  scene_config.py  scene_manager.py
ur10e/apps/: camera_test.py  generate_block_dataset.py  isaac_moveit_bridge.py  pick_place_with_camera.py  sim_camera_ros_publisher.py  target_follow.py  yolo_camera_node.py
ur10e/config/rviz/: sim_camera.rviz
ur10e/controller/: pick_place.py
ur10e/rmpflow/: ur.urdf.xacro  ur10e_rmpflow_common.yaml
ur10e/scripts/: convert_replicator_to_yolo.sh  run_generate_block_dataset.sh  run_isaac_moveit_bridge.sh  run_moveit_scene_collision_publisher.sh  run_mtc_isaac_demo.sh  run_mtc_isaac_pick_place.sh  run_mtc_isaac_pick_place_command.sh  run_pick_place_with_camera.sh  run_sim_camera_publisher.sh  run_sim_camera_rviz.sh  run_target_follow.sh  run_yolo_camera_node.sh  send_robot_command.py
ur10e/tasks/: pick_place.py
ur10e/test/: test_command_parser.py
ur10e/tests/: test_calibration.py  test_color_detector.py  test_command_parser.py  test_command_server.py  test_depth_utils.py  test_detection_store.py  test_grasp_policy.py  test_llm_to_json.py  test_mock_vision.py  test_mtc_command_runner.py  test_scene_manager.py  test_yolo_camera_node.py  test_yolo_detector.py  test_yolo_webcam.py  yolo test.py
ur10e/tools/: convert_replicator_to_yolo.py
ur10e/vision/: base.py  calibration.py  color_detector.py  depth_utils.py  mock_vision.py  orbbec_vision.py  scene_objects.py  yolo_detector.py
(+9 files in other folders)
