<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_moveit_bridge</name>
  <version>0.0.1</version>
  <description>MoveIt action bridge for commanding Isaac Sim articulations through ROS 2 topics.</description>
  <maintainer email="minwoo@example.com">minwoo</maintainer>
  <license>Apache-2.0</license>

  <depend>control_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
